we don't have auto refresh anymore so activated back update button
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1541502 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/macro.vm
+++ b/server/reporting/src/main/resources/templates/macro.vm
@@ -28,7 +28,7 @@
 <form class="form-inline" id="update-$id" role="form">
     #datePicker("From", "${id}-datetimepicker-start")
     #datePicker("To", "${id}-datetimepicker-end")
-    #*<button type="submit" class="btn btn-primary col-lg-12">Update</button>*#
+    <button id="${id}-submit" type="submit" class="btn btn-primary col-lg-12">Update</button>
 </form>
 #end
 
