making date buttong working back
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1541554 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/macro.vm
+++ b/server/reporting/src/main/resources/templates/macro.vm
@@ -18,7 +18,7 @@
 <span id="$id" class="col-lg-6">
     <label for="l$id">$label</label>
     <span class="add-on">
-      <i data-time-icon="icon-time" data-date-icon="icon-calendar" class="glyphicon glyphicon-calendar"></i>
+      <i data-time-icon="icon-time" data-date-icon="icon-calendar" class="glyphicon glyphicon-th"></i>
     </span>
     <input data-format="dd/MM/yyyy hh:mm:ss" type="text" class="form-control" id="l$id">
 </span>
