adding date to node status
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1541851 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/status/detail.vm
+++ b/server/reporting/src/main/resources/templates/status/detail.vm
@@ -17,7 +17,7 @@
 <h1>Node $name</h1>
 
 <div>
-    <div class="alert alert-$helper.map($node.status)">Global status: $node.status</div>
+    <div class="alert alert-$helper.map($node.status)">Global status ($!node.date): $node.status</div>
     <table class="table table-bordered table-striped">
         <thead>
         <tr>
