view statuses by app if marker has a #
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1543330 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/status/home.vm
+++ b/server/reporting/src/main/resources/templates/status/home.vm
@@ -19,14 +19,20 @@
 <div>
     Here is the list of available nodes with their status:
     <ul>
-        #foreach ($node in $nodes.entrySet())
-            #set($status = $node.value.status)
-            #set($statusClass = $helper.map($status))
-            <li>
-                <div class="alert alert-$statusClass">
-                    <a class="alert-$statusClass" href="$mapping/status/$node.key">$node.key ($!node.value.date)</a>: $status
-                </div>
-            </li>
+        #foreach ($nodes in $apps.entrySet())
+        <li>$nodes.key
+            <ul>
+            #foreach ($node in $nodes.value.entrySet())
+                #set($status = $node.value.status)
+                #set($statusClass = $helper.map($status))
+                <li>
+                    <div class="alert alert-$statusClass">
+                        <a class="alert-$statusClass" href="$mapping/status/$node.key">$node.key ($!node.value.date)</a>: $status
+                    </div>
+                </li>
+            #end
+            </ul>
+        </li>
         #end
     </ul>
 </div>
