--- a/server/reporting/src/main/resources/templates/report/report-csv.vm
+++ b/server/reporting/src/main/resources/templates/report/report-csv.vm
@@ -13,5 +13,6 @@
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-*#$headers#foreach ( $line in $lines )#foreach ( $item in $line )$item#if( $foreach.hasNext )$separator#end#end#end
+*#$headers#foreach ( $line in $lines )#foreach ( $item in $line )$item#if( $foreach.hasNext )$separator#end#end
 
+#end
