start working on path tracking cassandra data retrieve
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1578371 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/pathtracking/home.vm
+++ b/server/reporting/src/main/resources/templates/pathtracking/home.vm
@@ -17,7 +17,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-3">
-
+            #foreach( $id in $trackingIds )
+                $id
+            #end
         </div>
         <div class="col-lg-3">
 
