start working on the pathtracking detail screen
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1578681 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/pathtracking/home.vm
+++ b/server/reporting/src/main/resources/templates/pathtracking/home.vm
@@ -17,9 +17,11 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-3">
+            <ul>
             #foreach( $id in $trackingIds )
-                $id
+                <li><a href="$mapping/pathtracking/pathtrackingdetail/$id">$id</a></li>
             #end
+            </ul>
         </div>
         <div class="col-lg-3">
 
