add a bean to have information on Path tracking
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1578684 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/pathtracking/pathtrackingdetail.vm
+++ b/server/reporting/src/main/resources/templates/pathtracking/pathtrackingdetail.vm
@@ -19,7 +19,7 @@
         <div class="col-lg-9">
             <ul>
               #foreach( $entry in $entries)
-                <li>$entry.className:$entry.methodName</li>
+                <li>$entry.className:$entry.methodName:$entry.level:$entry.executionTime</li>
               #end
             </ul>
         </div>
