--- a/server/reporting/src/main/resources/templates/pathtracking/home.vm
+++ b/server/reporting/src/main/resources/templates/pathtracking/home.vm
@@ -18,8 +18,8 @@
     <div class="row">
         <div class="col-lg-3">
             <ul>
-            #foreach( $id in $trackingIds )
-                <li><a href="$mapping/pathtracking/pathtrackingdetail/$id">$id</a></li>
+            #foreach( $pathCallInformation in $pathCallInformations )
+                <li><a href="$mapping/pathtracking/pathtrackingdetail/$pathCallInformation.trackingId">$pathCallInformation.trackingId:  $dateTool.format("yyyy-MM-dd'T'HH:mm:ssz", $pathCallInformation.startTime.time)</a></li>
             #end
             </ul>
         </div>
