getting rid of velocity-tools
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1585294 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/pathtracking/home.vm
+++ b/server/reporting/src/main/resources/templates/pathtracking/home.vm
@@ -19,7 +19,7 @@
         <div class="col-lg-9">
             <ul>
             #foreach( $pathCallInformation in $pathCallInformations )
-                <li><a href="$mapping/pathtracking/pathtrackingdetail/$pathCallInformation.trackingId">$pathCallInformation.trackingId:  $dateTool.format("yyyy-MM-dd'T'HH:mm:ssz", $pathCallInformation.startTime.time)</a></li>
+                <li><a href="$mapping/pathtracking/pathtrackingdetail/$pathCallInformation.trackingId">$pathCallInformation.trackingId:  $dateTool.format("yyyy-MM-dd'T'HH:mm:ssz", $pathCallInformation.startTime)</a></li>
             #end
             </ul>
         </div>
