--- a/server/reporting/src/main/resources/templates/pathtracking/home.vm
+++ b/server/reporting/src/main/resources/templates/pathtracking/home.vm
@@ -19,7 +19,7 @@
         <div class="col-lg-9">
             <ul>
             #foreach( $pathCallInformation in $pathCallInformations )
-                <li><a href="$mapping/pathtracking/pathtrackingdetail/$pathCallInformation.trackingId">$pathCallInformation.trackingId:  $dateTool.format("yyyy-MM-dd'T'HH:mm:ssz", $pathCallInformation.startTime)</a></li>
+                <li><a href="$mapping/pathtracking/pathtrackingdetail/$pathCallInformation.trackingId/100">$pathCallInformation.trackingId:  $dateTool.format("yyyy-MM-dd'T'HH:mm:ssz", $pathCallInformation.startTime)</a></li>
             #end
             </ul>
         </div>
