--- a/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
@@ -14,4 +14,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<div id="cpu"></div>
+<div class="row">
+  <div class="col-lg-3">
+    <div id="cpu"></div>
+  </div>
+</div>
