--- a/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
@@ -18,4 +18,7 @@
   <div class="col-lg-3">
     <div id="cpu"></div>
   </div>
+  <div class="col-lg-3">
+    <div id="memory"></div>
+  </div>
 </div>
