more data in jvm report
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616743 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
@@ -21,4 +21,10 @@
   <div class="col-lg-3">
     <div id="memory"></div>
   </div>
+  <div class="col-lg-3">
+    <div id="nonheapmemory"></div>
+  </div>
+  <div class="col-lg-3">
+    <div id="activethreads"></div>
+  </div>
 </div>
