--- a/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
@@ -16,15 +16,51 @@
 -->
 <div class="row">
   <div class="col-lg-3">
-    <div id="cpu"></div>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <i class="icon-bar-chart"></i>CPU
+        </h3>
+      </div>
+      <div class="panel-body">
+        <div id="cpu"></div>
+      </div>
+    </div>
   </div>
   <div class="col-lg-3">
-    <div id="memory"></div>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <i class="icon-bar-chart"></i>Used Memory
+        </h3>
+      </div>
+      <div class="panel-body">
+        <div id="memory"></div>
+      </div>
+    </div>
   </div>
   <div class="col-lg-3">
-    <div id="nonheapmemory"></div>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <i class="icon-bar-chart"></i>Used Non Heap Memory
+        </h3>
+      </div>
+      <div class="panel-body">
+        <div id="nonheapmemory"></div>
+      </div>
+    </div>
   </div>
   <div class="col-lg-3">
-    <div id="activethreads"></div>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <i class="icon-bar-chart"></i>Active Threads
+        </h3>
+      </div>
+      <div class="panel-body">
+        <div id="activethreads"></div>
+      </div>
+    </div>
   </div>
 </div>
