add spinner during loading time
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616746 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
@@ -23,7 +23,7 @@
         </h3>
       </div>
       <div class="panel-body">
-        <div id="cpu"></div>
+        <div id="cpu"><i class="fa fa-spinner fa-spin"></i></div>
       </div>
     </div>
   </div>
@@ -35,7 +35,7 @@
         </h3>
       </div>
       <div class="panel-body">
-        <div id="memory"></div>
+        <div id="memory"><i class="fa fa-spinner fa-spin"></i></div>
       </div>
     </div>
   </div>
@@ -47,7 +47,7 @@
         </h3>
       </div>
       <div class="panel-body">
-        <div id="nonheapmemory"></div>
+        <div id="nonheapmemory"><i class="fa fa-spinner fa-spin"></i></div>
       </div>
     </div>
   </div>
@@ -59,7 +59,7 @@
         </h3>
       </div>
       <div class="panel-body">
-        <div id="activethreads"></div>
+        <div id="activethreads"><i class="fa fa-spinner fa-spin"></i></div>
       </div>
     </div>
   </div>
