fix ui for start/end date
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1618805 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
@@ -18,32 +18,32 @@
   <div class="col-lg-2">
   </div>
   <div class="col-lg-4">
-    <div class="form-group" role="form">
-      <label for="icpu-datetimepicker-start">From</label>
-      <button type="button" class="btn btn-default" ng-click="startDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="startDate" is-open="startDateOpened"
-             min-date="minDate" datepicker-options="dateOptions" ng-required="true" close-text="Close" id="icpu-datetimepicker-start" />
+    <div class="dropdown">
+      <label for="datetimepicker-from">From</label>
+      <a class="dropdown-toggle" id="dropdown-startdate" role="button" data-toggle="dropdown" data-target="#" href="#">
+        <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-calendar"></i></button>
+      </a>
+      <input type="text" class="form-control" data-ng-model="data.startDate" id="datetimepicker-from">
+      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-enddate">
+        <li>
+          <datetimepicker data-ng-model="data.startDate" data-datetimepicker-config="{  }"/>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="col-lg-4">
     <div class="dropdown">
       <label for="datetimepicker-to">To</label>
-      <div class="input-group">
-
-        <input type="text" class="form-control" data-ng-model="endDate" id="datetimepicker-to">
-        <span class="input-group-addon">
-        <a class="dropdown-toggle" id="dropdown-enddate" role="button" data-toggle="dropdown" data-target="#" href="#">
-        <i class="glyphicon glyphicon-calendar"></i>
-        </a>
-        </span>
-      </div>
+      <a class="dropdown-toggle" id="dropdown-enddate" role="button" data-toggle="dropdown" data-target="#" href="#">
+        <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-calendar"></i></button>
+      </a>
+      <input type="text" class="form-control" data-ng-model="data.endDate" id="datetimepicker-to">
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-enddate">
         <li>
-          <datetimepicker data-ng-model="endDate" data-datetimepicker-config="{  }"/>
+          <datetimepicker data-ng-model="data.endDate" data-datetimepicker-config="{  }"/>
         </li>
       </ul>
     </div>
-
   </div>
   <div class="col-lg-2">
     <button type="button" class="btn btn-primary" ng-click="updateGraphs()">Update</button>
