finish thread detail display
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1619034 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/threads.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/threads.html
@@ -18,11 +18,16 @@
   <div class="col-lg-2" style="word-break: break-all; word-wrap: break-word;">
     <ul>
       <li ng-repeat="threadInfo in data.threadInfos">
-        {{threadInfo.name}}
+        <a href="#threads/{{::threadInfo.encodedName}}">{{::threadInfo.name}}</a>
       </li>
     </ul>
   </div>
   <div class="col-lg-10">
-    content
+    <p>
+      State: {{::data.currentThread.state}}
+    </p>
+    <p>
+      <pre>{{::data.currentThread.dump}}</pre>
+    </p>
   </div>
 </div>
