counters grid start working
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1619689 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/report.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/report.html
@@ -14,8 +14,6 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<div class="row">
-  <div class="col-lg-12">
-    report
-  </div>
+
+<div class="gridStyle" ng-grid="gridOptions">
 </div>
