--- a/server/reporting/reporting-ui/src/main/webapp/partials/report.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/report.html
@@ -14,6 +14,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
+    <!-- ng-style="getTableStyle()" -->
 
-<div class="gridStyle" ng-grid="gridOptions">
+<div ng-grid="gridOptions">
+
 </div>
