--- a/server/reporting/reporting-ui/src/main/webapp/partials/gauge-detail.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/gauge-detail.html
@@ -16,10 +16,18 @@
 -->
 <div class="row">
   <div class="col-lg-12">
-    <ul>
-      <li ng-repeat="gaugeInfo in data.gaugesInfo">
-        <a href="#gauges/{{::gaugeInfo.encodedName}}">{{::gaugeInfo.name}}</a>
-      </li>
-    </ul>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <i class="icon-bar-chart"></i>Gauge: {{::data.gaugeResult.gaugeName}}
+        </h3>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div id="gaugeresult"><i class="fa fa-spinner fa-spin"></i></div>
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
