--- a/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/jvm.html
@@ -23,7 +23,7 @@
       <a class="dropdown-toggle" id="dropdown-startdate" role="button" data-toggle="dropdown" data-target="#" href="#">
         <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-calendar"></i></button>
       </a>
-      <input type="text" class="form-control" data-ng-model="data.startDate" id="datetimepicker-from">
+      <input type="text" class="form-control" data-ng-model="data.startDate" id="datetimepicker-from" disabled>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-enddate">
         <li>
           <datetimepicker data-ng-model="data.startDate" data-datetimepicker-config="{  }"/>
@@ -37,7 +37,7 @@
       <a class="dropdown-toggle" id="dropdown-enddate" role="button" data-toggle="dropdown" data-target="#" href="#">
         <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-calendar"></i></button>
       </a>
-      <input type="text" class="form-control" data-ng-model="data.endDate" id="datetimepicker-to">
+      <input type="text" class="form-control" data-ng-model="data.endDate" id="datetimepicker-to" disabled>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-enddate">
         <li>
           <datetimepicker data-ng-model="data.endDate" data-datetimepicker-config="{  }"/>
