--- a/server/reporting/reporting-ui/src/main/webapp/partials/status.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/status.html
@@ -16,6 +16,10 @@
 -->
 <div class="row">
   <div class="col-lg-12">
-    status
+    <ul>
+      <li ng-repeat="applicationStatuses in data.applicationStatuseses">
+        <a href="#status/{{::applicationStatuses.name}}">{{::applicationStatuses.name}}</a>
+      </li>
+    </ul>
   </div>
 </div>
