improve status rendering
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1621915 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/status.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/status.html
@@ -18,7 +18,13 @@
   <div class="col-lg-12">
     <ul>
       <li ng-repeat="applicationStatuses in data.applicationStatuseses">
-        <a href="#status/{{::applicationStatuses.name}}">{{::applicationStatuses.name}}</a>
+        {{::applicationStatuses.name}}
+        <ul>
+          <li ng-repeat="nodeStatusInfo in applicationStatuses.nodeStatusInfos">
+            <a href="#status/{{::nodeStatusInfo.name}}">{{::nodeStatusInfo.name}} ({{::nodeStatusInfo.date | date:'medium'}}) - {{::nodeStatusInfo.status}}</a>
+          </li>
+        </ul>
+        </li>
       </li>
     </ul>
   </div>
