status display done
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1621916 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/src/main/webapp/partials/status-detail.html
+++ b/server/reporting/reporting-ui/src/main/webapp/partials/status-detail.html
@@ -16,6 +16,27 @@
 -->
 <div class="row">
   <div class="col-lg-12">
-    status detail
+    <h1>Node {{::nodeStatusInfo.name}}</h1>
+    <div>
+      <div class="alert alert-{{::nodeStatusInfo.statusLabel}}">Global status (({{::nodeStatusInfo.date | date:'medium'}})): {{::nodeStatusInfo.status}}</div>
+
+      <table class="table table-bordered table-striped">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Status</th>
+        </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="validationResultInfo in nodeStatusInfos.results" class="{{::validationResultInfo.statusLabel}}">
+            <td>{{::validationResultInfo.name}}</td>
+            <td>{{::validationResultInfo.message}}</td>
+            <td>{{::validationResultInfo.status}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
   </div>
 </div>
